se agrega . al inicio de la ruta de las imagenes para deployar en github pages

--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300&family=Tilt+Neon&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/asset/css/reset.css">
-    <link rel="stylesheet" href="/asset/css/base.css">
-    <link rel="stylesheet" href="/asset/css/head.css">
-    <link rel="stylesheet" href="/asset/css/menu.css">
-    <link rel="stylesheet" href="/asset/css/introduccion.css">
-    <link rel="stylesheet" href="/asset/css/sobremi.css">
-    <link rel="stylesheet" href="/asset/css/skill.css">
-    <link rel="stylesheet" href="/asset/css/hobbies.css">
-    <link rel="stylesheet" href="/asset/css/formacionacademica.css">
-    <link rel="stylesheet" href="/asset/css/experienciaprofesional.css">
-    <link rel="stylesheet" href="/asset/css/contacto.css">
-    <link rel="stylesheet" href="/asset/css/footer.css">
-    <link rel="stylesheet" href="/asset/css/panelprueba.css">
+    <link rel="stylesheet" href="./asset/css/reset.css">
+    <link rel="stylesheet" href="./asset/css/base.css">
+    <link rel="stylesheet" href="./asset/css/head.css">
+    <link rel="stylesheet" href="./asset/css/menu.css">
+    <link rel="stylesheet" href="./asset/css/introduccion.css">
+    <link rel="stylesheet" href="./asset/css/sobremi.css">
+    <link rel="stylesheet" href="./asset/css/skill.css">
+    <link rel="stylesheet" href="./asset/css/hobbies.css">
+    <link rel="stylesheet" href="./asset/css/formacionacademica.css">
+    <link rel="stylesheet" href="./asset/css/experienciaprofesional.css">
+    <link rel="stylesheet" href="./asset/css/contacto.css">
+    <link rel="stylesheet" href="./asset/css/footer.css">
+    <link rel="stylesheet" href="./asset/css/panelprueba.css">
 
 
     <title>Portafolio Esther Or</title>
@@ -46,7 +46,7 @@
 
             <section class="introduccion">
                 <div class="container__imagen">
-                    <img class="introduccion__imagen" src="/asset/img/img-introduccion.jpeg" alt="foto_Perfil">
+                    <img class="introduccion__imagen" src="./asset/img/img-introduccion.jpeg" alt="foto_Perfil">
                 </div>
                 <div class="container__texto">
                 <h2 class="introduccion__titulo">Hola, mi nombre es Esther  y soy desarrolladora web
@@ -76,7 +76,7 @@
                     Inicie mi carrera profesional como Enfermera con énfasis administrativa, actualmente me encuentro 
                     orientada al estudio de desarrollo web y en ciencias de datos.. 
                 </p>
-                <img class="sobremi__firma" src="/asset/img/img-introduccion-firma.jpeg" alt="firma" />
+                <img class="sobremi__firma" src="./asset/img/img-introduccion-firma.jpeg" alt="firma" />
             </section>
 
             <!-- SKILLS -->
@@ -84,19 +84,19 @@
                 <h3 class="skill__titulo">SKILLS</h3>
                 <section class="skill__items">
                     <div class="skill__item">
-                        <img class="skill__imagen" src="/asset/img/skill-html2.png" alt="skill1" />
+                        <img class="skill__imagen" src="./asset/img/skill-html2.png" alt="skill1" />
                         <h3 class="skill__nombre">Html 5</h3>
                     </div>
                     <div class="skill__item">
-                        <img class="skill__imagen" src="/asset/img/skill-css2.png" alt="skill2" />
+                        <img class="skill__imagen" src="./asset/img/skill-css2.png" alt="skill2" />
                         <h3 class="skill__nombre">CSS3</h3>
                     </div>
                     <div class="skill__item">
-                        <img class="skill__imagen" src="/asset/img/skill-javascript.png" alt="skill3" />
+                        <img class="skill__imagen" src="./asset/img/skill-javascript.png" alt="skill3" />
                         <h3 class="skill__nombre">JavaScript</h3>
                     </div>
                     <div class="skill__item">
-                        <img class="skill__imagen" src="/asset/img/skill-python.png" alt="skill4" />
+                        <img class="skill__imagen" src="./asset/img/skill-python.png" alt="skill4" />
                         <h3 class="skill__nombre">Python</h3>
                     </div>
                     
@@ -108,22 +108,22 @@
                 <h3 class="hobbies__titulo">HOBBIES</h3>
                 <section class="hobbies__items">
                     <div class="hobbies__item">
-                        <img class="hobbies__imagen" src="/asset/img/hobbies-cocina.png" alt="hobbie1" />
+                        <img class="hobbies__imagen" src="./asset/img/hobbies-cocina.png" alt="hobbie1" />
                         <h3 class="hobbies__nombre">Reposteria</h3>
                     </div>
 
                     <div class="hobbies__item">
-                        <img class="hobbies__imagen" src="/asset/img/hobbies-diy.png" alt="hobbie1" />
+                        <img class="hobbies__imagen" src="./asset/img/hobbies-diy.png" alt="hobbie1" />
                         <h3 class="hobbies__nombre">Manualidades</h3>
                     </div>
 
                     <div class="hobbies__item">
-                        <img class="hobbies__imagen" src="/asset/img/hobbies-plantas.png" alt="hobbie1" />
+                        <img class="hobbies__imagen" src="./asset/img/hobbies-plantas.png" alt="hobbie1" />
                         <h3 class="hobbies__nombre">Plantas</h3>
                     </div>
 
                     <div class="hobbies__item">
-                        <img class="hobbies__imagen" src="/asset/img/taza-de-cafe.png" alt="skill1" />
+                        <img class="hobbies__imagen" src="./asset/img/taza-de-cafe.png" alt="skill1" />
                         <h3 class="hobbies__nombre">Amo el Cafe</h3>
                     </div>
 
@@ -139,7 +139,7 @@
             <section class="formaciones">   
                 <div class="formacion">
                     <div class="formacion__caja__imagen">
-                        <img class="formacion__imagen" src="/asset/img/formacion-aluraoracle.png" alt="">
+                        <img class="formacion__imagen" src="./asset/img/formacion-aluraoracle.png" alt="">
                     </div>
                     <div class="formacion__contenido">
                         <h5 class="formacion__subtitulo">Oracle - Arula</h5>
@@ -149,7 +149,7 @@
 
                 <div class="formacion">
                     <div class="formacion__caja__imagen">
-                    <img class="formacion__imagen" src="/asset/img/formacion-Correlation-One.png" alt="">
+                    <img class="formacion__imagen" src="./asset/img/formacion-Correlation-One.png" alt="">
                     </div>
                     <div class="formacion__contenido">
                         <h5 class="formacion__subtitulo">Corrrelation One - DS4A</h5>
@@ -159,7 +159,7 @@
 
                 <div class="formacion">
                     <div class="formacion__caja__imagen">
-                        <img class="formacion__imagen" src="/asset/img/formacion-uis.png" alt="">
+                        <img class="formacion__imagen" src="./asset/img/formacion-uis.png" alt="">
                     </div>
                     <div class="formacion__contenido">
                         <h5 class="formacion__subtitulo">Universidad Industrial de Santander</h5>
@@ -169,7 +169,7 @@
 
                 <div class="formacion">
                     <div class="formacion__caja__imagen">
-                        <img class="formacion__imagen" src="/asset/img/formacion-coderhouse-logo.png"  alt="">
+                        <img class="formacion__imagen" src="./asset/img/formacion-coderhouse-logo.png"  alt="">
                     </div>
                     <div class="formacion__contenido">
                         <h5 class="formacion__subtitulo">CoderHouse</h5>
@@ -187,7 +187,7 @@
             <section class="experiencias">
                 <div class="experiencia">
                     <div class="experiencia__caja__imagen">
-                        <img class="experiencia__imagen" src="/asset/img/preview_encriptador_alura.png"
+                        <img class="experiencia__imagen" src="./asset/img/preview_encriptador_alura.png"
                             alt="Alura-Encriptador" />
                     </div>
                     <div class="experiencia__container__contenido">
@@ -207,7 +207,7 @@
 
                 <div class="experiencia">
                     <div class="experiencia__caja__imagen">
-                        <img class="experiencia__imagen" src="/asset/img/preview_ds4a.png" alt="alura-oracle" />
+                        <img class="experiencia__imagen" src="./asset/img/preview_ds4a.png" alt="alura-oracle" />
                     </div>
                     <div class="experiencia__container__contenido">
                         <div class="experiencia__contenido">
@@ -227,7 +227,7 @@
 
                 <div class="experiencia">
                     <div class="experiencia__caja__imagen">
-                        <img class="experiencia__imagen" src="/asset/img/preview_UIS_consultorio.png" alt="UIS - MinTIC" />
+                        <img class="experiencia__imagen" src="./asset/img/preview_UIS_consultorio.png" alt="UIS - MinTIC" />
                     </div>
                     <div class="experiencia__container__contenido">
                     <div class="experiencia__contenido">
@@ -248,7 +248,7 @@
 
                 <div class="experiencia">
                     <div class="experiencia__caja__imagen">
-                        <img class="experiencia__imagen" src="/asset/img/preview_coderhouse.png" alt="CoderHouse" />
+                        <img class="experiencia__imagen" src="./asset/img/preview_coderhouse.png" alt="CoderHouse" />
                     </div >
                     <div class="experiencia__container__contenido">
                     <div class="experiencia__contenido">
@@ -270,7 +270,7 @@
             <!--CONTACTO-->
             <section class="contacto" id="contacto">
                 <div>
-                    <img class="contacto__imagen" src="/asset/img/taza-de-cafe.png" alt="">
+                    <img class="contacto__imagen" src="./asset/img/taza-de-cafe.png" alt="">
                  </div>
                 <div class="container__contacto">
                     <h3 class="contacto__titulo">CONTACTO</h3>
